# context_free_grammar

./: .pre-commit-config.yaml  README.md  main.ipynb  pyproject.toml
modules/: utils.py
modules/data_manage/: load_mnist.py
modules/grammar/: count_accuracy.py  grammar.py  node.py  split_metrics.py
modules/grammar/merge/: stupid_merge_same_nodes.py
modules/plots/: draw_imgs.py  plot_random_from_grammar.py
